nats-micro/tests/ui/v2_invalid_subject.stderr
error: invalid subject `demo.v1.bad subject`
 --> tests/ui/v2_invalid_subject.rs:6:14
  |
6 |     async fn bad() {}
  |              ^^^
